# callstack-monads

./: LICENSE  README.md  stack-monads.cabal
app/: Main.hs
src/: Reader.hs  Stack.hs
